--- a/calculator/pubspec.yaml
+++ b/calculator/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   fpdart: ^0.0.12
   equatable: ^2.0.3
+  get_it: ^7.2.0
+  mocktail: ^0.2.0
 
 dev_dependencies:
   flutter_test:
